--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<title>NYC Checklist</title>
 	<!--link rel="stylesheet" href="style.css"-->
 
-	<link rel="stylesheet" href="styling/allpages.css">
-	<link rel="stylesheet" href="styling/index.css">
+	<link rel="stylesheet" href="./src/styling/allpages.css">
+	<link rel="stylesheet" href="./src/styling/index.css">
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="script.js" defer></script>
+    <script src="./src/script.js" defer></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeKR3s1E42hqIl6V8yR0UiMHJZxXbeAkk&callback=initMap"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAeKR3s1E42hqIl6V8yR0UiMHJZxXbeAkk&callback=initMap" async defer></script>
 </head>
@@ -26,18 +26,18 @@
                 <input id="searchInput" class="search" type="text" placeholder="Search events">      
 				<ul>
 					<li><a class="active" href="#">Home</a></li>
-					<li><a href="./components/about.html">About</a></li>
-					<li><a href="./components/trending.html">Events</a></li>
-					<li><a href="./components/feedback.html">Feedback</a></li>
-                    <li><a class="signin" href="./components/login.html">Sign In</a></li>
+					<li><a href="./src/components/about.html">About</a></li>
+					<li><a href="./src/components/trending.html">Events</a></li>
+					<li><a href="./src/components/feedback.html">Feedback</a></li>
+                    <li><a class="signin" href="./src/components/login.html">Sign In</a></li>
                     <div class="dropdown" data-dropdown>
                         <button id="link" class="material-symbols-outlined" data-dropdown-button>menu</button>
                         <div class="dropdown-menu">
                             <a href="index.html">Home</a>
-					        <a href="./components/about.html">About</a>
-					        <a href="./components/trending.html">Events</a>
-					        <a href="./components/feedback.html">Feedback</a>
-                            <a class="signin" href="./components/login.html">Sign In</a>
+					        <a href="./src/components/about.html">About</a>
+					        <a href="./src/components/trending.html">Events</a>
+					        <a href="./src/components/feedback.html">Feedback</a>
+                            <a class="signin" href="./src/components/login.html">Sign In</a>
                         </div>
                     </div>
 
@@ -103,7 +103,7 @@
                 </div>
                 
                 <div>
-                    <a href=./components/trending.html>
+                    <a href=./src/components/trending.html>
                         <button id="button">Explore</button>
                     </a> 
                 </div>
