--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>      
                 <input id="searchInput" class="search" type="text" placeholder="Search events">      
 				<ul>
-					<li><a class="active" href="#">Home</a></li>
+					<li><a class="active" href="index.html">Home</a></li>
 					<li><a href="./src/components/about.html">About</a></li>
 					<li><a href="./src/components/trending.html">Events</a></li>
 					<li><a href="./src/components/feedback.html">Feedback</a></li>
